# contracts-bot

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  requirements.txt
app/clients/dadata/: README.md  __init__.py  pyproject.toml
app/clients/dadata/api/default/: find_by_email_company.py  find_by_id_address.py  find_by_id_party.py  geo_locate_address.py  ip_locate_address.py  suggest_address.py  suggest_fias.py  suggest_outward.py  suggest_party.py
app/clients/dadata/dadata_suggestions_api_client/models/: __init__.py  address_custom_type_0_item.py  address_part.py  bank_opf.py  bank_state.py  bank_state_status.py  (+65 more)
app/clients/dadata/models/: __init__.py  address.py  address_divisions.py  administrative_division.py  bank_name.py  bank_opf_type.py  bank_party.py  company_with_email.py  detect_address_response.py  fias_address.py  find_address_by_id_request_division.py  find_affiliated_party_request.py  find_affiliated_party_request_scope_type_0_item.py  find_fias_by_id_request.py  find_party_by_id_request.py  fio.py  fio_gender.py  founder_legal_party.py  founder_legal_party_type.py  founder_party.py  founder_party_type.py  founder_physical_party.py  founder_physical_party_type.py  geo_locate_address_request.py  geo_locate_outward_request.py  individual_party_type.py  ip_locate_address_request_division.py  legal_party.py  legal_party_branch_type.py  location_address.py  location_code.py  location_geo.py  manager_party.py  manager_physical_party.py  party.py  party_authority.py  party_capital.py  party_code_unit.py  party_country.py  party_document.py  (+39 more)
(+27 files in other folders)
